Final update to pymaceutical challenge assignment, Final Assesment and updated README

--- a/Pymaceuticals.ipynb
+++ b/Pymaceuticals.ipynb
@@ -1005,10 +1005,10 @@
     }
    ],
    "source": [
-    "# Put promisiong treatments into a list for for loop (and later for plot labels)\n",
+    "# Put promisiong treatments into a list for loop (and later for plot labels)\n",
     "treatment_list = [\"Capomulin\", \"Ramicane\", \"Infubinol\", \"Ceftamin\"]\n",
     "\n",
-    "# Empty list to for tumor vol data (for plotting)\n",
+    "# Empty list for tumor vol data (for plotting)\n",
     "tumor_vol_list = []\n",
     "\n",
     "# Calculate the IQR and quantitatively determine if there are any potential outliers\n",
@@ -1172,12 +1172,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc7b4a70-7a13-4005-9ea8-f1ccdaeae411",
+   "cell_type": "markdown",
+   "id": "df36fa1f-1b08-49e6-8e1e-f0cd91eeb5e5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Final Analysis"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "9c74fc28-57d3-4d7a-aad0-003cf0ad728a",
+   "metadata": {},
+   "source": [
+    "There appears to be a strong correlation between the weight of the mice and the average tumor size through out the length of the study regardless of drug regimen. I would say that the results illustrated by mouse number l509 appear promising. Mouse ID l509 (from Capomulin drug regimen) seems to show a  decline in tumor size beginning around the 20th day of the study and a continuing mostly downward trend to the end. There does to seem to be a slight upward trend near the end of the study but this \"rebound\" seems consistant with the pattern of tumor reduction though out the trial.\n",
+    "\n",
+    "A closer look at other subjects from the Capomulin group should be looked at closlly to see if the results are consistant."
+   ]
   }
  ],
  "metadata": {
